--- a/index.html
+++ b/index.html
@@ -1,43 +1,28 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Calculator</title>
-		<meta charset="utf-8">
-	</head>
-	<body>
-<<<<<<< HEAD
-		<h1>Calculadora de ……su nombre y apellidos……</h1>
-=======
-		<h1>Calculadora de Jose Ignacio Mora Perez</h1>
->>>>>>> sin(x) button
-		Number:
-		<input type="text" id="n1">
-		<p>
-			<button onclick="inverse()"> 1/x </button>
-			<button onclick="square()"> x^2 </button>
-			<button onclick="cube()"> x^3 </button>
-			<button onclick="sine()"> sin </button>
-		</p>
-		<script type="text/javascript">
-			function cube() {
-				var num = document.getElementById("n1");
-				num.value = Math.pow(num.value, 3);
-			}
-<<<<<<< HEAD
-			function square() {
-				var num = document.getElementById("n1");
-				num.value = Math.pow(num.value, 2);
-			}
-			function inverse() {
-				var num = document.getElementById("n1");
-				num.value = 1/num.value;
-=======
-			function sine() {
-				var num = document.getElementById("n1");
-				num.value = Math.sin(num.value);
->>>>>>> sin(x) button
-			}
-		</script>
-	</body>
+    <head>
+        <title>Calculator</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <h1>Calculadora de José Igancio Mora Pérez</h1>
+        Number:
+        <input type="text" id="n1">
+        <p>
+            <button onclick="inverse()"> 1/x </button>
+            <button onclick="square()"> x^2 </button>
+            <button onclick="cube()"> x^3 </button>
+            <button onclick="power_4()"> x^4</button>
+        </p>
+        <script type="text/javascript">
+            function cube() {
+                var num = document.getElementById("n1");
+                num.value = Math.pow(num.value, 3);
+            }
+            function power_4() {
+                var num = document.getElementById("n1");
+                num.value = Math.pow(num.value, 4);
+            }
+        </script>
+    </body>
 </html>
-
